<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.azhaurov.jetruby.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_currentdirlabel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView2"
        android:layout_below="@+id/switchInet"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/textDirectory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/main_nonselected"
        tools:ignore="UnusedAttribute"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnSelectFromDir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_choosedir"
        android:layout_below="@+id/textDirectory"
        android:layout_alignParentEnd="true" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_startview"
        android:id="@+id/btnStartView"
        android:nestedScrollingEnabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="59dp"
        android:enabled="true"
        android:onClick="onBtnStartViewClick" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_loadfrominet"
        android:id="@+id/switchInet"
        android:onClick="initMainActivityUI"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:clickable="true"
        android:enabled="true"
        android:focusable="false"
        android:splitTrack="false" />

</RelativeLayout>